Fix photo overlap on LAIGA page

--- a/src/pages/Labs/Laiga/laiga.module.css
+++ b/src/pages/Labs/Laiga/laiga.module.css
@@ -183,7 +183,7 @@
   position: absolute;
   width: 300px;
   height: 300px;
-  top: 84%; 
+  top: 85%;
   left: calc(2% + 60px);
   padding: 10px;
   border-radius: 20px;
@@ -211,7 +211,7 @@
   position: absolute;
   width: 300px;
   height: 300px;
-  top: 124%; 
+  top: 125%;
   left: calc(2% + 60px);
   padding: 10px;
   border-radius: 20px;
